# aiogram_parser

./: .gitignore  pyproject.toml
aiogram_parser/: runner.py
aiogram_parser/client/: __init__.py  configs.py  start_client.py
aiogram_parser/main_configs/: data.py
aiogram_parser/telegram/: __init__.py  bot.py
aiogram_parser/telegram/config_data/: __init__.py
aiogram_parser/telegram/handlers/: other_handlers.py  user_handlers.py
aiogram_parser/telegram/lexicons/: __init__.py  lexicon.py
